유치원 상세 및 유치원 메인 프론트 수정 / 김성호 / 02-02 17:29

--- a/src/main/resources/templates/kinder-detail.html
+++ b/src/main/resources/templates/kinder-detail.html
@@ -456,7 +456,7 @@
                   <ul id="safety_list2">
                     <li class="mb-4">
                       <img src="./img/ukids/kinder/fire-extinguisher.png" width="100px" height="100px" class="d-black">
-                      <h3 style="display: inline-block; font-weight: 800;" class="mx-4">정기소독 관리 대상 시설</h3>
+                      <h3 style="display: inline-block; font-weight: 800;" class="mx-4">소방안전점검 여부</h3>
                     </li>
                     <li class="mb-4">
                       <img src="./img/ukids/kinder/fuel.png" width="100px" height="100px" class="d-black">
