--- a/src/main/resources/templates/kinder-main.html
+++ b/src/main/resources/templates/kinder-main.html
@@ -374,31 +374,37 @@
                       <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" id="security1">
-                          <label class="form-check-label widget-filter-item-text" for="security1">정기소독관리 대상</label>
+                          <label class="form-check-label widget-filter-item-text" for="security1">정기소독 관리 대상 시설</label>
                         </div>
                       </li>
                       <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" id="security2">
-                          <label class="form-check-label widget-filter-item-text" for="security2">농업시설안전검사 대상</label>
+                          <label class="form-check-label widget-filter-item-text" for="security2">소방안전점검 여부</label>
                         </div>
                       </li>
                       <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" id="security3">
-                          <label class="form-check-label widget-filter-item-text" for="security3">소방대피훈련 시행</label>
+                          <label class="form-check-label widget-filter-item-text" for="security3">소방대피훈련 시행 시설</label>
                         </div>
                       </li>
                       <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" id="security4">
-                          <label class="form-check-label widget-filter-item-text" for="security4">소방안전점검 완료</label>
+                          <label class="form-check-label widget-filter-item-text" for="security4">놀이시설안전검사 대상 시설</label>
                         </div>
                       </li>
                       <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" id="security5">
-                          <label class="form-check-label widget-filter-item-text" for="security5">가스점검 완료</label>
+                          <label class="form-check-label widget-filter-item-text" for="security5">가스점검 완료 시설</label>
+                        </div>
+                      </li>
+                       <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" id="security6">
+                          <label class="form-check-label widget-filter-item-text" for="security6">전기설비점검 완료 시설</label>
                         </div>
                       </li>
                     </ul>
