--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -109,7 +109,7 @@
         <div class="container">
 
           <!-- Brand -->
-          <a class="navbar-brand d-none d-lg-block order-lg-1" th:href="@{/index}">
+          <a class="navbar-brand d-none d-lg-block order-lg-1" th:href="@{/}">
             <img width="65" th:src="@{/img/ukids/logo.jpg}" alt="ukids"/>
           </a>
 
@@ -138,7 +138,7 @@
               <div class="navbar-tool-text ms-n3"><small>안녕하세요,유키즈님</small><p class="mypg">마이페이지</p></div>
             </a>
             
-            <a class="navbar-tool ms-3" th:href="@{/index}">
+            <a class="navbar-tool ms-3" th:href="@{/}">
               <div class="navbar-tool-icon-box bg-secondary">
                 <i class="ci-unlocked" style="font-size: large; padding-top: 13px;"></i>
               </div>
