어린이집 검색 / 이다영 / 02-03 15:50
- address.js / kinder-main.html / nursery-main.html 수정
- nursery-mapper.xml / Nursery.java / NurseryMapper.java /
	NurseryService.java / NurseryController.java 추가

--- a/src/main/resources/templates/kinder-main.html
+++ b/src/main/resources/templates/kinder-main.html
@@ -437,7 +437,7 @@
             <!-- Products grid-->
             <div class="headtext">
               <b class="bold">검색 목록 [[${count}]]건</b>
-              <a href="compare-kinder.html" class="compare">
+              <a href="/compare-kinder" class="compare">
                 <div class="compareIcon"><img src="img/back(1).svg"></div>&nbsp;&nbsp;<b>선택목록 비교하기</b>
               </a>
             </div>
