어린이집 상세페이지 / 이다영 / 02-04 11:16
[주요내용]
- 이미지 색상 및 파일명 변경
	brightness-high2.svg / bus-front2.svg / cup-straw2.svg /
	dribbble2.svg / universal-access2.svg

- 어림이집 메인 html 수정 : 상세페이지 이동 url 수정
	nursery-main.html

- 어린이집 상세페이지 css 수정 : 제공서비스 부분
	nursery-detail.css

- 어린이집 상세페이지 js 수정 : 차트 관련 코드 분리
	nursery-detail.js
-  어린이집 상세페이지 관련 코드 수정 및 추가
	nursery-detail.html / nursery-mapper.xml /
	NurseryMapper.java / NurseryService.java / NurseryController.java

--- a/src/main/resources/templates/nursery-main.html
+++ b/src/main/resources/templates/nursery-main.html
@@ -440,28 +440,28 @@
 	            </th:block>
 	            
 	            <th:block th:if="${list != null}">
-	            	<th:block th:each="nursery : ${list}">
-			              <div class="box777">
-			                <div class="photo777" style="background-image: url(img/어린이집/nursery1.JPG);">
-			                  <button class="button7" th:id="'compare' + ${nursery.no}" value="false" th:onclick="|onClickCompare('compare' + ${nursery.no})|">
-			                    <i class="ci-bookmark"></i>
-			                    <b>&nbsp;비교&nbsp;</b>
-			                  </button>
-			                  <button class="btn-wishlist1 btn-sm" th:id="'heart' + ${nursery.no}" value="false" th:onclick="|onClickHeart('heart' + ${nursery.no})|" style="position: relative; left: 150px;">
-			                    <img src="img/suit-heart.svg" class="heart">
-			                  </button>
-			                </div>
-			                <div class="container777">
-			                  <a class="sarip">&nbsp;&nbsp;[[${nursery.crtypename}]]&nbsp;&nbsp;</a>
-			                  <div class="container888">
-			                    <h3 class="product-title fs-sm" style="margin-top: 10px;">
-			                      <a href="nursery-detail.html"><b>[[${nursery.crname}]]</b></a>
-			                    </h3>
-			                  </div>
-			                  <div class="location"><i class="ci-location text-accent fw-bold"></i>&nbsp;[[${nursery.craddr}]]</div>
-			                </div>
-			              </div>
-	            	</th:block>
+		            	<th:block th:each="nursery : ${list}">
+				              <div class="box777">
+				                <div class="photo777" style="background-image: url(img/어린이집/nursery1.JPG);">
+				                  <button class="button7" th:id="'compare' + ${nursery.no}" value="false" th:onclick="|onClickCompare('compare' + ${nursery.no})|">
+				                    <i class="ci-bookmark"></i>
+				                    <b>&nbsp;비교&nbsp;</b>
+				                  </button>
+				                  <button class="btn-wishlist1 btn-sm" th:id="'heart' + ${nursery.no}" value="false" th:onclick="|onClickHeart('heart' + ${nursery.no})|" style="position: relative; left: 150px;">
+				                    <img src="img/suit-heart.svg" class="heart">
+				                  </button>
+				                </div>
+				                <div class="container777">
+				                  <a class="sarip">&nbsp;&nbsp;[[${nursery.crtypename}]]&nbsp;&nbsp;</a>
+				                  <div class="container888">
+				                    <h3 class="product-title fs-sm" style="margin-top: 10px;">
+				                      <a th:href="|/nursery-detail?no=${nursery.no}|"><b>[[${nursery.crname}]]</b></a>
+				                    </h3>
+				                  </div>
+				                  <div class="location"><i class="ci-location text-accent fw-bold"></i>&nbsp;[[${nursery.craddr}]]</div>
+				                </div>
+				              </div>
+		            	</th:block>
 	            </th:block>
 
             </div>
