--- a/src/main/resources/static/css/nursery-detail.css
+++ b/src/main/resources/static/css/nursery-detail.css
@@ -61,7 +61,8 @@ li h5 {
   float: left;
 }
 
-.service1, .service2, .service3, .service4, .service5 {
+
+.service-y {
   width: 50px;
   height: 50px;
   border: 2px solid #323ea8;
@@ -71,11 +72,11 @@ li h5 {
   margin-left: 5px;
 }
 
-.service6 {
+.service-n {
   width: 50px;
   height: 50px;
-  border: 2px solid gray;
   border-radius: 100%;
+  border: 2px solid gray;
   font-size: 13px;
   margin-right: 7px;
   margin-left: 5px;
