--- a/src/main/resources/templates/kinder-main.html
+++ b/src/main/resources/templates/kinder-main.html
@@ -451,11 +451,11 @@
 	            	<th:block th:each="kinder : ${list}">
 		              <div class="box777">
 		                  <div class="photo777" style="background-image: url(img/유치원/kinder1.JPG);">
-		                    <button class="button7" th:id="'compare' + ${kinder.kinNo}" value="false" th:onclick="|onClickCompare('compare' + ${kinder.kinNo})|">
+		                    <button class="button7" th:id="'compare' + ${kinder.kinNo}" value="false" th:onclick="|onClickCompare('compare${kinder.kinNo}')|">
 		                      <i class="ci-bookmark"></i>
 		                      <b>&nbsp;비교&nbsp;</b>
 		                    </button>
-		                    <button class="btn-wishlist1 btn-sm" th:id="'heart' + ${kinder.kinNo}" value="false" th:onclick="|onClickHeart('heart' + ${kinder.kinNo})|" style="position: relative; left: 150px;">
+		                    <button class="btn-wishlist1 btn-sm" th:id="'heart' + ${kinder.kinNo}" value="false" th:onclick="|onClickHeart('heart${kinder.kinNo}')|" style="position: relative; left: 150px;">
 		                      <img src="img/suit-heart.svg" class="iimage">
 		                    </button>
 		                  </div>
@@ -463,7 +463,7 @@
 		                    <a class="sarip">&nbsp;&nbsp;[[${kinder.establish}]]&nbsp;&nbsp;</a>
 		                    <div class="container888">
 		                      <h3 class="product-title fs-sm" style="margin-top: 10px;" >
-		                        <a href="kinder-detail.html"><b>[[${kinder.kindername}]]</b></a>
+		                        <a th:href="|/kinder-detail?no=${kinder.kinNo}|"><b>[[${kinder.kindername}]]</b></a>
 		                      </h3>
 		                    </div>
 		                    <div class="location"><i class="ci-location text-accent fw-bold"></i>&nbsp;[[${kinder.addr}]]</div>
