--- a/src/main/resources/static/css/kinder-nursery.css
+++ b/src/main/resources/static/css/kinder-nursery.css
@@ -77,7 +77,7 @@
   .box777 {
     display: inline-block;
     width: 300px; 
-    height: 400px;
+    height: 390px;
     margin: 10px 10px 10px 10px;
     box-shadow: 2px 2px 2px 2px gainsboro;
     border-radius: 5px;
@@ -89,6 +89,9 @@
     margin-top: 10px;
     margin-left: 10px;
     border-radius: 5px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
   }
   .button7-fill {
     background-color: #fc6c93; 
@@ -97,6 +100,9 @@
     margin-top: 10px;
     margin-left: 10px;
     border-radius: 5px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
   }
   .container777 { 
     width: 280px; 
@@ -119,8 +125,9 @@
     background-color: white; 
     margin-right: 5px; 
     margin-top: 5px; 
-    position: relative; 
-    left: 110px;
+   	position: absolute;
+    top: 5px;
+    right: 5px;
   }
   .btn-wishlist1-fill {
     padding: 0 !important;
@@ -133,8 +140,9 @@
     background-color: pink; 
     margin-right: 5px; 
     margin-top: 5px; 
-    position: relative; 
-    left: 110px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
   }
   .headtext {
     height: 50px; 
@@ -169,14 +177,18 @@
     color : cornflowerblue;
   }
   .photo777 {
-    background-size: cover;
+    position : relative;
     margin-top: 10px; 
     margin-left: 10px;
     width: 280px; 
     height: 250px;
   }
+  .photo {
+  	width: 280px; 
+    height: 250px;
+  }
   .container888 {
-    height: 30px;
+    height: 40px;
     margin-top: 15px;
   }
   .location {
@@ -191,12 +203,7 @@
     border: 1px solid #fc6c93; 
     border-radius: 100px;
   }
-  #headerimg1 {
-    background-image: url(../img/ukids/유치원.jpg);
-    height: 300px;
-  }
-  #headerimg2 {
-    background-image: url(../img/ukids/배경2.jpg);
+  #headerimg {
     height: 300px;
   }
   .form777 {
@@ -235,7 +242,7 @@
   }
   .ddive {
     margin-top: 5px; 
-    margin-bottom: 7px; 
+    margin-bottom: 30px; 
     width: 1080px;
     position: relative;
     right: 88px;
