--- a/src/main/resources/templates/nursery-detail.html
+++ b/src/main/resources/templates/nursery-detail.html
@@ -183,10 +183,10 @@
                     <li class="mb-3"><h5 class="fw-bold">대표자명</h5><div class="info_content2" style="width: 280px;">[[${nursery.Crrepname}]]</div></li>
                     <li class="mb-3"><h5 class="fw-bold">운영시간</h5><div class="info_content2" style="width: 300px;">08시30분 ~ 19시30분</div></li>
                     <th:block th:if="${nursery.crhome == ''}">
-	                    <li class="mb-3"><h5 class="fw-bold">홈페이지</h5><div class="info_content2" style="width: 280px;"><a><i class="ci-home fw-blod" id="home_icon"></i></a></div></li>
+	                    <li class="mb-3"><h5 class="fw-bold">홈페이지</h5><div class="info_content2" style="width: 280px;"><a><i class="ci-home fw-bold" id="home_icon"></i></a></div></li>
                     </th:block>
                     <th:block th:if="${nursery.crhome != ''}">
-	                    <li class="mb-3"><h5 class="fw-bold">홈페이지</h5><div class="info_content2" style="width: 280px;"><a th:href="|${nursery.crhome}|"><i class="ci-home fw-blod" id="home_icon" style="color: #fc6c93"></i></a></div></li>
+	                    <li class="mb-3"><h5 class="fw-bold">홈페이지</h5><div class="info_content2" style="width: 280px;"><a th:href="|${nursery.crhome}|"><i class="ci-home fw-bold" id="home_icon" style="color: #fc6c93"></i></a></div></li>
                     </th:block>
                     <li class="mb-3"><h5 class="fw-bold">제공 서비스</h5>
                       <span style="padding-left: 270px;">
