--- a/src/main/resources/templates/nursery-main.html
+++ b/src/main/resources/templates/nursery-main.html
@@ -57,7 +57,7 @@
       <!-- 헤더!!!!!! -->
       <header th:fragment="header" th:replace="~{common :: header}"></header>
       
-      <section class="position-relative bg-dark bg-size-cover bg-position-center py-5 mb-4" id="headerimg2">
+      <section class="position-relative bg-dark bg-size-cover bg-position-center py-5 mb-4" id="headerimg" style="background-image: url(/img/ukids/배경2.jpg);">
         <span class="position-absolute top-0 start-0 w-100 h-100" style="opacity: .65;"></span>
         <div class="container position-relative zindex-5 mb-3">
           <div class="order-lg-2 mb-3 mb-lg-0 pt-0 pb-4">
@@ -442,19 +442,20 @@
 	            <th:block th:if="${list != null}">
 		            	<th:block th:each="nursery : ${list}">
 				              <div class="box777">
-				                <div class="photo777" style="background-image: url(img/어린이집/nursery1.JPG);">
+				                <div class="photo777">
+				                  <img class="photo" src="img/어린이집/nursery1.JPG">
 				                  <button class="button7" th:id="'compare' + ${nursery.no}" value="false" th:onclick="|onClickCompare('compare${nursery.no}')|">
-				                    <i class="ci-bookmark"></i>
+				                    <i class="ci-bookmark fw-bold"></i>
 				                    <b>&nbsp;비교&nbsp;</b>
 				                  </button>
-				                  <button class="btn-wishlist1 btn-sm" th:id="'heart' + ${nursery.no}" value="false" th:onclick="|onClickHeart('heart${nursery.no}')|" style="position: relative; left: 150px;">
+				                  <button class="btn-wishlist1 btn-sm" th:id="'heart' + ${nursery.no}" value="false" th:onclick="|onClickHeart('heart${nursery.no}')|">
 				                    <img src="img/suit-heart.svg" class="heart">
 				                  </button>
 				                </div>
 				                <div class="container777">
-				                  <a class="sarip">&nbsp;&nbsp;[[${nursery.crtypename}]]&nbsp;&nbsp;</a>
+				                  <a class="sarip fw-bold">&nbsp;&nbsp;[[${nursery.crtypename}]]&nbsp;&nbsp;</a>
 				                  <div class="container888">
-				                    <h3 class="product-title fs-sm" style="margin-top: 10px;">
+				                    <h3 class="product-title fs-lg" style="margin-top: 10px;">
 				                      <a th:href="|/nursery-detail?no=${nursery.no}|"><b>[[${nursery.crname}]]</b></a>
 				                    </h3>
 				                  </div>
