--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -156,18 +156,18 @@
 						<div class="row gx-4 gy-3">
 							<div class="col-sm-6">
 								<label class="form-label" for="account-fn">아이디</label> <input
-									class="form-control-cgw1" type="text" id="account-fn"
+									class="form-control-cgw1" type="text" name="id" id="account-fn"
 									th:value="${session.loginMember.id}" readonly required>
 							</div>
 							<div class="col-sm-6">
 								<label class="form-label" for="account-ln">이름</label> <input
-									class="form-control-cgw1" type="text" id="account-ln"
+									class="form-control-cgw1" type="text" name="name" id="account-ln"
 									th:value="${session.loginMember.name}"  required>
 							</div>
 							<div class="col-sm-6">
 								<label class="form-label" for="account-pass">비밀번호</label>
 								<div class="password-toggle">
-									<input class="form-control" type="password" id="account-pass">
+									<input class="form-control" type="password" name="password" id="account-pass">
 									<label class="password-toggle-btn"
 										aria-label="Show/hide password"> <input
 										class="password-toggle-check" type="checkbox"><span
@@ -189,24 +189,24 @@
 							</div>
 							<div class="col-sm-6">
 								<label class="form-label" for="account-email">이메일</label> <input
-									class="form-control-cgw1" type="email" id="account-email"
+									class="form-control-cgw1" type="email" name="email" id="account-email"
 									th:value="${session.loginMember.email}" required>
 							</div>
 							<div class="col-sm-6">
 								<label class="form-label" for="account-phone">연락처</label> <input
-									class="form-control-cgw1" type="text" id="account-phone"
+									class="form-control-cgw1" type="text" name="phone" id="account-phone"
 									th:value="${session.loginMember.phone}">
 							</div>
 							<div class="col-sm-6">
 								<label class="form-label" for="account-address">주소</label>
 								<div class="">
-									<input class="form-control-postcode" type="text"
+									<input class="form-control-postcode" type="text" name="postCode"
 										id="addressPostcode" th:value="${session.loginMember.postCode}"> <input
 										type="button" class="btn btn-primary-cgw2 btn-sm mx-4"
 										value="우편번호 찾기" onclick="kakaopost()"> <input
-										class="form-control-cgw1" type="text" id="addressBasic"
+										class="form-control-cgw1" type="text" name="address" id="addressBasic"
 										th:value="${session.loginMember.address}"> <input
-										class="form-control-cgw1" type="text" id="addressDetail"
+										class="form-control-cgw1" type="text" name="address2" id="addressDetail"
 										th:value="${session.loginMember.address2}">
 								</div>
 							</div>
@@ -214,7 +214,7 @@
 							<th:block th:if="${session.loginMember.role == 'ROLE_USER'}">
 							<div class="col-sm-6">
 								<label class="form-label" for="account-phone">자녀 수</label><br>
-								<input class="form-control-postcode" type="number"
+								<input class="form-control-postcode" type="number" name="kidNum"
 									id="account-phone" value="0" required>&nbsp;&nbsp;&nbsp;명<br>
 								<br> <label class="form-label" for="account-phone">자녀
 									나이</label><br> <input class="form-check-input" type="checkbox"
@@ -244,11 +244,11 @@
 							<th:block th:if="${session.loginMember.role != 'ROLE_USER'}">
 							<div class="col-sm-6">
 								<label class="form-label" for="checkout-country">소속</label> <select
-									class="form-select" id="checkout-country">
+									class="form-select" name="field" id="checkout-country">
 									<option>유치원</option>
 									<option>어린이집</option>
 								</select><br> <label class="form-label" for="account-phone">소속
-									코드</label> <input class="form-control-cgw1" type="text"
+									코드</label> <input class="form-control-cgw1" type="text" name="fieldCd"
 									id="account-phone">
 							</div>
 							</th:block>
