join 자녀수 관련 수정 / 조규완 02-05 02:31 -join.html : 자녀수 최소 최대값 적용

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -287,7 +287,7 @@
                     <br>
                     <div class="col-sm-12">
                       <label class="form-label" for="account-childNum">자녀 수</label>&nbsp;
-                      <input class="form-control-postcode" type="number" id="account-childNum" value="0"
+                      <input class="form-control-postcode" type="number" id="account-childNum" value="0" min="0" max="10" 
                         required>&nbsp;&nbsp;&nbsp;명<br><br>
                       <label class="form-label" for="account-childAge">자녀 나이</label>
                       <div class="">
